# Prerequisite-Aware-GraphRAG-Distillation-for-Educational-QA

./: .gitignore  ERROR_ANALYSIS_GUIDE.md  README.md  README_baseline.md  app.py  clean_concepts_cache.py  clrs_pipeline.py  failure_mode_demo.py  instruction_set_strategy.md  knowledge_graph.py  main.py  parsing_chucking_pipeline.ipynb  pyproject.toml  qa_generation_llama.py  requirements.txt  results_charts.ipynb  run_all.py
app/: streamlit_app.py
configs/: lora_0.5b_graphrag_gold.yaml  lora_0.5b_graphrag_hybrid.yaml  lora_1.5b_graphrag_gold.yaml  lora_1.5b_graphrag_hybrid.yaml  lora_1.5b_rag_gold.yaml  lora_3b_graphrag_gold.yaml  lora_3b_graphrag_hybrid.yaml
data/: knowledge_graph.py
data/processed/: clrs_chunks.json  clrs_concepts.json  clrs_graph.gexf  clrs_graph.html  clrs_graph.json  clrs_graph_eda.json  clrs_qa_pairs_llama.json  eda_report.json
docs/: project_usage.md
notebooks/: 01_metaqa_full_eda.ipynb
notebooks/.ipynb_checkpoints/: 01_metaqa_full_eda-checkpoint.ipynb
results/: comparison.csv
results/error_analysis/: answer_set_error_breakdown.csv  dataset_trace_failure_modes.csv  dataset_trace_items.csv  dataset_trace_summary_by_hop.csv  model_metrics_all.csv  saved_example_answer_errors.csv  summary.json  summary.md
results/qwen2.5-0.5b-graphrag-gold/: eval_results.json
results/qwen2.5-0.5b-graphrag-hybrid/: eval_examples.json  eval_results.json
results/qwen2.5-1.5b-graphrag-gold/: eval_results.json
results/qwen2.5-1.5b-graphrag-hybrid/: eval_examples.json  eval_results.json
results/qwen2.5-3b-graphrag-gold/: eval_results.json
(+50 files in other folders)
