[project]
name = "prerequisite-aware-graphrag-distillation-for-educational-qa-progress"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu",
    "numpy",
    "openai",
    "sentence-transformers",
    "torch",
    "tqdm",
    "transformers",
    "wandb",
]
