[project]
name = "prerequisite-aware-graphrag-distillation-for-educational-qa-progress"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu",
    "ipykernel",
    "jupyter",
    "matplotlib",
    "networkx",
    "numpy",
    "openai",
    "pandas",
    "requests",
    "scikit-learn",
    "seaborn",
    "sentence-transformers",
    "streamlit",
    "torch",
    "tqdm",
    "transformers",
    "wandb",
]
